Added jquery to save n' proceed button:Final Commit

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <input type="button" class="svebtn" value="Save & Proceed">
+                        <input type="submit" class="svebtn" value="Save & Proceed">
                     </div>
                 </form>
               </div>  
@@ -99,7 +99,7 @@
                                 style="height:200px" required></textarea>
                         </div>
                         <div class="row">
-                            <input class="svebtn" type="button" value="Save & Proceed">
+                            <input class="svebtn" type="submit" value="Save & Proceed">
                         </div>
                     </div>
                 </form>
